--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
+<html>
+  <body>
+    <h1>Персональна сторінка Гейка Андрія Орестовича<br> </h1>
+    <p1>Хм... нічого не можу про себе написати, не бачу смисла в цьому, все що треба ітак буде ясно xD<br><br></p1>
+    <p2><text>Автобіографія<br></text>
+     <text>Сьогодення<br></text>
+     <text>Друзі<br></text>
+     <text>Галерея<br></text><p2>
 
+    </body>
+</html>
