--- a/biography.html
+++ b/biography.html
@@ -1,1 +1,33 @@
-
+<html>
+  <body>
+    <h1>Автобіографія Гейка Андрія Орестовича<br> </h1>
+    <p1>Назад на головну<br><br></p1>
+    <h2>Зміст</h2>
+    <h3>Базова інформація<br></h3>
+    	<p2>
+    	this is secred information
+    </p2>
+    <text><br><br>До змісту</text>
+    <h3>Дитинство<br></h3>
+    <p2>
+    	this is secred information
+    </p2>
+    <text><br><br>До змісту</text>
+    <h3>Шкільні роки<br></h3>
+    <p2>
+    	this is secred information
+    </p2>
+    <text><br><br>До змісту</text>
+    <h3>Поза школою<br></h3>
+    <p2>
+    	this is secred information
+    </p2>
+    <text><br><br>До змісту</text>
+    <h3>Університет<br></h3>
+    <p2>
+    	this is secred information
+    </p2>
+    <text><br><br>До змісту</text>
+    <text><br>Уверх</text>
+    </body>
+</html>
