--- a/friends.html
+++ b/friends.html
@@ -1,1 +1,44 @@
-
+<html>
+  <body>
+    <h1>Друзі Гейка Андрія Орестовича<br> </h1>
+    <p1>Назад на головну<br></p1>
+    <h2>Мої друзі</h2>
+    <table>
+    <tr>
+      <th>Прізвище</th>
+      <th>Ім’я</th>
+      <th>Дата народження</th>
+      <th>Адреса проживання</th>
+      <th>Контактний телефон</th> 
+    </tr>
+    <tr>
+      <td>Порошенко</td>
+      <td>Петро</td>
+      <td>26.09.1965</td>
+      <td>Вул. Матейки 27</td> 
+      <td>+380957363467</td> 
+    </tr>
+    <tr>
+      <td>Янукович</td>
+      <td>Віктор</td>
+      <td>09.08.1950</td>
+      <td>Вул. Степана Бандеры 10</td> 
+      <td>+380666314372</td> 
+    </tr>
+    <tr>
+      <td>Тимошенко</td>
+      <td>Юлія</td>
+      <td>27.11.1960</td>
+      <td>Вул. Сорохтея 40</td> 
+      <td>+380507521735</td> 
+    </tr>
+    <tr>
+      <td>Зеленський</td>
+      <td>Володимир</td>
+      <td>25.01.1978</td>
+      <td>Вул. Сахарова 1</td> 
+      <td>+380097163823</td> 
+    </tr>
+    </table>
+    </body>
+</html>
