--- a/gallery.html
+++ b/gallery.html
@@ -1,1 +1,11 @@
-
+<html>
+  <body>
+    <h1>Галерея Гейка Андрія Орестовича<br> </h1>
+    <p1>Назад на головну<br></p1>
+    <h2>Мої зображення</h2>
+    <h3>Зображення у цій папці</h3>
+    <img src ="Why.png">
+    <h3>Зображення у папці</h3>
+    <h3>Зображення онлайн</h3>
+    </body>
+</html>
