--- a/biography.html
+++ b/biography.html
@@ -2,32 +2,42 @@
   <body>
     <h1>Автобіографія Гейка Андрія Орестовича<br> </h1>
     <p1>Назад на головну<br><br></p1>
-    <h2>Зміст</h2>
-    <h3>Базова інформація<br></h3>
-    	<p2>
-    	this is secred information
-    </p2>
-    <text><br><br>До змісту</text>
-    <h3>Дитинство<br></h3>
-    <p2>
-    	this is secred information
-    </p2>
-    <text><br><br>До змісту</text>
-    <h3>Шкільні роки<br></h3>
-    <p2>
-    	this is secred information
-    </p2>
-    <text><br><br>До змісту</text>
-    <h3>Поза школою<br></h3>
-    <p2>
-    	this is secred information
-    </p2>
-    <text><br><br>До змісту</text>
-    <h3>Університет<br></h3>
-    <p2>
-    	this is secred information
-    </p2>
-    <text><br><br>До змісту</text>
+    <h3>Зміст</h3>
+    <article>
+        <h2>Базова інформація<br></h2>
+        <p2>
+            this is secred information
+        </p2>
+        <text><br><br>До змісту</text>
+    </article>
+    <article>
+        <h2>Дитинство<br></h2>
+        <p2>
+            this is secred information
+            </p2>
+        <text><br><br>До змісту</text>
+    </article>
+    <article>
+        <h2>Шкільні роки<br></h2>
+        <p3>
+    	    this is secred information
+        </p3>
+        <text><br><br>До змісту</text>
+    </article>
+    <article>
+        <h2>Поза школою<br></h2>
+        <p4>
+    	    this is secred information
+        </p4>
+        <text><br><br>До змісту</text>
+    </article>
+    <article>
+        <h2>Університет<br></h2>
+        <p5>
+        	this is secred information
+        </p5>
+        <text><br><br>До змісту</text>
+    </article>
     <text><br>Уверх</text>
     </body>
 </html>
