--- a/gallery.html
+++ b/gallery.html
@@ -6,6 +6,8 @@
     <h3>Зображення у цій папці</h3>
     <img src ="Why.png">
     <h3>Зображення у папці</h3>
+    <img src ="image\Who.png">
     <h3>Зображення онлайн</h3>
+    <img src ="https://place-hold.it/640x480/purple/red&text=Where">
     </body>
 </html>
