--- a/biography.html
+++ b/biography.html
@@ -1,43 +1,49 @@
 <html>
   <body>
-    <h1>Автобіографія Гейка Андрія Орестовича<br> </h1>
-    <p1>Назад на головну<br><br></p1>
-    <h3>Зміст</h3>
-    <article>
-        <h2>Базова інформація<br></h2>
+    <h1 id="top">Автобіографія Гейка Андрія Орестовича<br> </h1>
+    <a href="index.html">Назад на головну<br></a>
+    <h3 id="сontent">Зміст</h3>
+    <a href="#article1">Базова інформація<br></a>
+    <a href="#article2">Дитинство<br></a>
+    <a href="#article3">Шкільні роки<br></a>
+    <a href="#article4">Поза школою<br></a>
+    <a href="#article5">Університет<br></a>
+    <article id="article1">
+        <h2>Базова інформація</h2>
         <p2>
-            this is secred information
+            Ну, я народився 31.01.2005. На даний час люблю слухати музику. Також я люблю читати одну ранобе. І спілкуватися із різними людьми. Граю в різні комп'ютерні ігри але віддаю перевагу стратегіям та шутерам від першої особи. Люблю поїсти чіпси чи сухарики.
         </p2>
-        <text><br><br>До змісту</text>
+        <a href="#сontent"><br><br>До змісту</a>
     </article>
-    <article>
-        <h2>Дитинство<br></h2>
+    <article id="article2">
+        <h2>Дитинство</h2>
         <p2>
-            this is secred information
+            Про дитинство майже нічого не пам'ятаю. Швидше за все, воно було таким самим, як і у всіх. Мене водили до саду, потім забирали з нього. Я як усі діти чекав на літо для того, щоб відпочити, але як і у всіх мої плани щось псувало. Та й як зараз, любив поїсти щось солодке. 
             </p2>
-        <text><br><br>До змісту</text>
+        <a href="#сontent"><br><br>До змісту</a>
     </article>
-    <article>
-        <h2>Шкільні роки<br></h2>
+    <article id="article3">
+        <h2>Шкільні роки</h2>
         <p3>
-    	    this is secred information
+    	    Шкільні роки я мав дуже веселі. Я завжди отримував люлей від вчителів через те, що багато говорив на уроці. Не любив і не люблю німецьку та біологію. Мав дружні стосунки з усім класом та, незважаючи на розмови на уроці, добре спілкувався із вчителями. Також наш клас знаходив різні пригоди.
         </p3>
-        <text><br><br>До змісту</text>
+        <a href="#сontent"><br><br>До змісту</a>
     </article>
-    <article>
-        <h2>Поза школою<br></h2>
+    <article id="article4">
+        <h2>Поза школою</h2>
         <p4>
-    	    this is secred information
+    	    Ну поза школою я сидів вдома спілкуючись з товаришами. Міг трохи почитати чи послухати музику. Також допомагав мамі за потреби. Виконував домашні завдання за наявності. І ходив до репетиторів. :с
         </p4>
-        <text><br><br>До змісту</text>
+        <a href="#сontent"><br><br>До змісту</a>
     </article>
-    <article>
-        <h2>Університет<br></h2>
+    <article id="article5">
+        <h2>Університет</h2>
         <p5>
-        	this is secred information
+        	Я розумію, що навчаюсь у найкращому університеті України. Тому я думаю про те, як мені закрити сесію, щоби мене не вигнали з нього. Також в університеті я дізнаюсь багато нового. Я намагаюсь розуміти, що розповідають викладачі. І сподіваюся, що не отримаю сильних люлів на сесії. 
         </p5>
-        <text><br><br>До змісту</text>
+        <a href="#сontent"><br><br>До змісту</a>
     </article>
-    <text><br>Уверх</text>
+    <hr>
+    <a href="#top"><br>Уверх</a>
     </body>
 </html>
