--- a/friends.html
+++ b/friends.html
@@ -1,7 +1,7 @@
 <html>
   <body>
     <h1>Друзі Гейка Андрія Орестовича<br> </h1>
-    <p1>Назад на головну<br></p1>
+    <a href="index.html">Назад на головну<br></a>
     <h2>Мої друзі</h2>
     <table>
     <tr>
