--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
   <body>
     <h1>Персональна сторінка Гейка Андрія Орестовича<br> </h1>
-    <p1>Хм... нічого не можу про себе написати, не бачу смисла в цьому, все що треба ітак буде ясно xD<br><br></p1>
-    <p2><text>Автобіографія<br></text>
-     <text>Сьогодення<br></text>
-     <text>Друзі<br></text>
-     <text>Галерея<br></text><p2>
+    <p1>Люблю грати в різні ігри, найбільше всього в стратегії та шутери (бажано від першої особи) та спілкуватися з друзями в онлайн-додатку Discord. Також люблю читати ранобе. А ще я обожнюю багато спати.<br></p1>
+    <a href="biography.html">Автобіографія<br></a>
+     <a href="novadays.html">Сьогодення<br></a>
+     <a href="friends.html">Друзі<br></a>
+     <a href="gallery.html">Галерея<br></a>
 
     </body>
 </html>
