--- a/novadays.html
+++ b/novadays.html
@@ -1,7 +1,7 @@
 <html>
   <body>
     <h1>Сьогодення Гейка Андрія Орестовича<br> </h1>
-    <p1>Назад на головну<br></p1>
+    <a href="index.html">Назад на головну<br></a>
     <h2>Мій типовий список покупок</h2>
     <ul>
       <li>Мінеральна вода</li>
