--- a/Pract3/biography.html
+++ b/Pract3/biography.html
@@ -1,7 +1,10 @@
-<html>
-  <body>
-    <style>
-        #a1:link, #a1:visited  {
+<!DOCTYPE HTML>
+<html lang = "uk">
+    <head>
+      <meta charset="utf-8">
+      <title>biography.html</title>
+      <style>
+        .links:link, .links:visited  {
             background: blue;
             border: 1px solid black;
             color: green;
@@ -10,17 +13,17 @@
             text-align: center;
             margin-bottom: 1px;
         }
-        #a1:hover{
+        .links:hover{
             background: magenta;
             color: blue;
         }
-        #a1:active  {
+        .links:active  {
             background: yellow;
             color: green;
         }
         #p1{
             background-color: #8402c1;
-            color: #86d44f;
+            color: #aacccc;
         }
         #p2{
             background-color: #005c12;
@@ -28,29 +31,31 @@
         }
         #p3{
             background-color: #080080;
-            color: #999999;
+            color: #86d44f;
         }
         #p4{
-            background-color: #00ff33;
-            color: #005c12;
+            background-color: #277ECD;
+            color: #9cc543;
         }
         #p5{
             background-color: #13ba12;
-            color: #5f1562;
+            color: #5f1c62;
         }
     </style>
+    </head>
+  <body>
     <h1 id="top">Автобіографія Гейка Андрія Орестовича<br> </h1>
     <a href="index.html">Назад на головну<br></a>
     <h3 id="сontent">Зміст</h3>
-    <a id = "a1" href="#article1">Базова інформація<br></a>
-    <a id = "a1" href="#article2">Дитинство<br></a>
-    <a id = "a1" href="#article3">Шкільні роки<br></a>
-    <a id = "a1" href="#article4">Поза школою<br></a>
-    <a id = "a1" href="#article5">Університет<br></a>
+    <a class="links" href="#article1">Базова інформація<br></a>
+    <a class="links" href="#article2">Дитинство<br></a>
+    <a class="links" href="#article3">Шкільні роки<br></a>
+    <a class="links" href="#article4">Поза школою<br></a>
+    <a class="links" href="#article5">Університет<br></a>
     <article id="article1">
         <h2>Базова інформація</h2>
         <p id="p1">
-            Ну, я народився 31.01.2005. На даний час люблю слухати музику. Також я люблю читати одну ранобе. І спілкуватися із різними людьми. Граю в різні комп'ютерні ігри але віддаю перевагу стратегіям та шутерам від першої особи. Люблю поїсти чіпси чи сухарики.
+            Ну, я народився зимою. На даний час люблю слухати музику. Також я люблю читати одну ранобе. І спілкуватися із різними людьми. Граю в різні комп'ютерні ігри але віддаю перевагу стратегіям та шутерам від першої особи. Люблю поїсти чіпси чи сухарики.
         </p>
         <a href="#сontent">До змісту</a>
     </article>
