--- a/Pract3/index.html
+++ b/Pract3/index.html
@@ -1,37 +1,42 @@
-<html>
+<!DOCTYPE HTML>
+<html lang = "uk">
+    <head>
+      <meta charset="utf-8">
+      <title>index.html</title>
+      <style>
+        #a1:link{
+          color:orange;
+        }
+        #a2:link{
+          color:darkblue;
+        }
+        #a3:link{
+          color:aqua;
+        }
+        #a4:link{
+          color:darkgreen;
+        }
+        #a1:visited{
+          color:red;
+        }
+        #a2:visited{
+          color:blue;
+        }
+        #a3:visited{
+          color:#b8860b;
+        }
+        #a4:visited{
+          color:green;
+        }
+    </style>
+    </head>
   <body>
-  	<style type="text/css">
-  		#a1:link{
-  			color:orange;
-  		}
-  		#a2:link{
-  			color:darkblue;
-  		}
-  		#a3:link{
-  			color:aqua;
-  		}
-  		#a4:link{
-  			color:darkgreen;
-  		}
-  		#a1:visited{
-  			color:red;
-  		}
-  		#a2:visited{
-  			color:blue;
-  		}
-  		#a3:visited{
-  			color:yellow;
-  		}
-  		#a4:visited{
-  			color:green;
-  		}
-  	</style>
     <h1>Персональна сторінка Гейка Андрія Орестовича<br> </h1>
-    <p1>Люблю грати в різні ігри, найбільше всього в стратегії та шутери (бажано від першої особи) та спілкуватися з друзями в онлайн-додатку Discord. Також люблю читати ранобе. А ще я обожнюю багато спати.<br></p1>
+    <p>Люблю грати в різні ігри, найбільше всього в стратегії та шутери (бажано від першої особи) та спілкуватися з друзями в онлайн-додатку Discord. Також люблю читати ранобе. А ще я обожнюю багато спати.<br></p>
     <a id = "a1" href="biography.html">Автобіографія<br></a>
-     <a id = "a2"href="novadays.html">Сьогодення<br></a>
-     <a id = "a3"href="friends.html">Друзі<br></a>
-     <a id = "a4"href="gallery.html">Галерея<br></a>
+     <a id = "a2" href="novadays.html">Сьогодення<br></a>
+     <a id = "a3" href="friends.html">Друзі<br></a>
+     <a id = "a4" href="gallery.html">Галерея<br></a>
 
     </body>
 </html>
