--- a/Pract2/novadays.html
+++ b/Pract2/novadays.html
@@ -1,4 +1,8 @@
-<html>
+<!DOCTYPE HTML>
+<html lang = "uk">
+    <head>
+      <meta charset="utf-8">
+      <title>novadays.html</title>
   <body>
     <h1>Сьогодення Гейка Андрія Орестовича<br> </h1>
     <a href="index.html">Назад на головну<br></a>
