--- a/Pract2/gallery.html
+++ b/Pract2/gallery.html
@@ -1,4 +1,9 @@
-<html>
+<!DOCTYPE HTML>
+<html lang = "uk">
+    <head>
+      <meta charset="utf-8">
+      <title>index.html</title>
+    </head>
   <body>
     <h1>Галерея Гейка Андрія Орестовича<br> </h1>
     <a href="index.html">Назад на головну<br></a>
