--- a/Pract2/friends.html
+++ b/Pract2/friends.html
@@ -1,4 +1,9 @@
-<html>
+<!DOCTYPE HTML>
+<html lang = "uk">
+    <head>
+      <meta charset="utf-8">
+      <title>friends.html</title>
+    </head>
   <body>
     <h1>Друзі Гейка Андрія Орестовича<br> </h1>
     <a href="index.html">Назад на головну<br></a>
