--- a/Pract4/biography.html
+++ b/Pract4/biography.html
@@ -45,6 +45,10 @@
           text-align: center;
           font-size: 22px;
         }
+        .contents{
+          text-align: center;
+          font-size: 22px;
+        }
         .returonmain{
         font-style: italic;
         }
@@ -66,9 +70,9 @@
     </style>
     </head>
   <body>
-    <h1 id="top">Автобіографія Гейка Андрія Орестовича<br> </h1>
+    <h1 class="ststyle" id="top">Автобіографія Гейка Андрія Орестовича<br> </h1>
     <a class="returonmain" href="index.html">Назад на головну<br></a>
-    <h3 id="сontent">Зміст</h3>
+    <h3 class="contents" id="сontent">Зміст</h3>
     <a class="links" href="#article1">Базова інформація<br></a>
     <a class="links" href="#article2">Дитинство<br></a>
     <a class="links" href="#article3">Шкільні роки<br></a>
