--- a/KR/index.html
+++ b/KR/index.html
@@ -9,19 +9,54 @@
 		<h1>Контрольна робота</h1>
 		<h2>Гейка Андрія Орестовича</h2>
 		<h3>Варіант 2</h3>
-		<h3>Текст</h3>
-		<div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio dolor iste ut itaque, ipsa temporibus facere quo illo, voluptatem eum obcaecati reprehenderit dolores hic dignissimos. Quasi, natus voluptatem? Dolore, doloribus.</div>
-        <ul>
-            <li>Чай</li>
-            <li>Овочі:<ol>
-                <li>Капуста</li>
-                <li>Морква</li>
-                <li>Буряк</li>
-            </ol></li>
-            <li>Сир</li>
-            <li>Сметана</li>
-            <li>Кетчуп</li>
-              
-          </ul>
+        <div class = "block1">
+    		<h3>Текст</h3>
+    		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio dolor iste ut itaque, ipsa temporibus facere quo illo, voluptatem eum obcaecati reprehenderit dolores hic dignissimos. Quasi, natus voluptatem? Dolore, doloribus.</p>
+        </div>
+        <div></div>
+        <div class="">
+            <div class = "block2 item-wrap">
+            <h3>Список</h3>
+            <ul>
+                <li>Чай</li>
+                <li>Овочі:<ol>
+                    <li>Капуста</li>
+                    <li>Морква</li>
+                    <li>Буряк</li>
+                </ol></li>
+                <li>Сир</li>
+                <li>Сметана</li>
+                <li>Кетчуп</li>
+              </ul>
+            </div>
+        </div>
+        <div class = "block3">
+            <h3>Таблиця</h3>
+            <table>
+                <th>Місто</th>
+                <th>Населення</th>
+                <tr>
+                    <td>Дублін</td>
+                    <td>1,1 млн. ос.</td>
+                </tr>
+                <tr>
+                    <td>Ер-Ріяд</td>
+                    <td>7,6 млн. ос.</td>
+                </tr>
+                <tr>
+                    <td>Мюнхен</td>
+                    <td>1,4 млн. ос.</td>
+                </tr>
+                <tr>
+                    <td>Детройт</td>
+                    <td>0,6 млн. ос.</td>
+                </tr>
+            </table>
+        </div>
+        <div class = "block4">
+            <h3>Зображення</h3>
+            <img src = "Why_I_here.png"></img>
+        </div>
+        <a href="https://place-hold.it/1280x720/purple/red&text=Who_Are_You?" target="_blank">Посилання на зображення</a>
 	</body>
 </html>
