--- a/Pract2/index.html
+++ b/Pract2/index.html
@@ -5,12 +5,17 @@
       <title>index.html</title>
     </head>
   <body>
-    <h1>Персональна сторінка Гейка Андрія Орестовича<br> </h1>
-    <p>Люблю грати в різні ігри, найбільше всього в стратегії та шутери (бажано від першої особи) та спілкуватися з друзями в онлайн-додатку Discord. Також люблю читати ранобе. А ще я обожнюю багато спати.<br></p>
-    <a href="biography.html">Автобіографія<br></a>
-     <a href="novadays.html">Сьогодення<br></a>
-     <a href="friends.html">Друзі<br></a>
-     <a href="gallery.html">Галерея<br></a>
+    <h1>Персональна сторінка Гейка Андрія Орестовича</h1>
+    <p>Люблю грати в різні ігри, найбільше всього в стратегії та шутери (бажано від першої особи) та спілкуватися з друзями в онлайн-додатку Discord. Також люблю читати ранобе. А ще я обожнюю багато спати.</p>
+    <br>
+    <a href="biography.html">Автобіографія</a>
+    <br>
+    <a href="novadays.html">Сьогодення</a>
+    <br>
+    <a href="friends.html">Друзі</a>
+    <br>
+    <a href="gallery.html">Галерея</a>
+    <br>
 
     </body>
 </html>
