--- a/Pract4/index.html
+++ b/Pract4/index.html
@@ -40,10 +40,16 @@
   <body>
     <h1>Персональна сторінка Гейка Андрія Орестовича<br> </h1>
     <p>Люблю грати в різні ігри, найбільше всього в стратегії та шутери (бажано від першої особи) та спілкуватися з друзями в онлайн-додатку Discord. Також люблю читати ранобе. А ще я обожнюю багато спати.<br></p>
-    <a id = "a1" href="biography.html">Автобіографія<br></a>
-     <a id = "a2" href="novadays.html">Сьогодення<br></a>
-     <a id = "a3" href="friends.html">Друзі<br></a>
-     <a id = "a4" href="gallery.html">Галерея<br></a>
-
-    </body>
+    <body>
+    <h1>Персональна сторінка Гейка Андрія Орестовича</h1>
+    <p>Люблю грати в різні ігри, найбільше всього в стратегії та шутери (бажано від першої особи) та спілкуватися з друзями в онлайн-додатку Discord. Також люблю читати ранобе. А ще я обожнюю багато спати.</p>
+    <a id = "a1" href="biography.html">Автобіографія</a>
+    <br>
+    <a id = "a2" href="novadays.html">Сьогодення</a>
+    <br>
+    <a id = "a3" href="friends.html">Друзі</a>
+    <br>
+    <a id = "a4" href="gallery.html">Галерея</a>
+    <br>
+   </body>
 </html>
