--- a/Pract2/novadays.html
+++ b/Pract2/novadays.html
@@ -5,7 +5,7 @@
       <title>novadays.html</title>
   <body>
     <h1>Сьогодення Гейка Андрія Орестовича<br> </h1>
-    <a href="index.html">Назад на головну<br></a>
+    <a href="index.html">Назад на головну</a>
     <h2>Мій типовий список покупок</h2>
     <ul>
       <li>Мінеральна вода</li>
