--- a/Pract4/novadays.html
+++ b/Pract4/novadays.html
@@ -43,8 +43,8 @@
       }
     </style>
   <body>
-    <h1 class="ststyle">Сьогодення Гейка Андрія Орестовича<br> </h1>
-    <a class="returonmain" href="index.html">Назад на головну<br></a>
+    <h1 class="ststyle">Сьогодення Гейка Андрія Орестовича</h1>
+    <a class="returonmain" href="index.html">Назад на головну</a>
     <h2 id = "mylist">Мій типовий список покупок</h2>
     <ul id="ulist1">
       <li>Мінеральна вода</li>
