--- a/Pract3/novadays.html
+++ b/Pract3/novadays.html
@@ -30,7 +30,7 @@
       }
     </style>
   <body>
-    <h1>Сьогодення Гейка Андрія Орестовича<br> </h1>
+    <h1>Сьогодення Гейка Андрія Орестовича</h1>
     <a href="index.html">Назад на головну</a>
     <h2>Мій типовий список покупок</h2>
     <ul id="ulist1">
