--- a/Pract2/novadays.html
+++ b/Pract2/novadays.html
@@ -4,7 +4,7 @@
       <meta charset="utf-8">
       <title>novadays.html</title>
   <body>
-    <h1>Сьогодення Гейка Андрія Орестовича<br> </h1>
+    <h1>Сьогодення Гейка Андрія Орестовича</h1>
     <a href="index.html">Назад на головну</a>
     <h2>Мій типовий список покупок</h2>
     <ul>
