--- a/Pract6/novadays.html
+++ b/Pract6/novadays.html
@@ -5,8 +5,8 @@
       <title>novadays.html</title>
        <link rel="stylesheet" href="novadays.css">
   <body>
-    <h1 class="ststyle">Сьогодення Гейка Андрія Орестовича<br> </h1>
-    <a class="returonmain" href="index.html">Назад на головну<br></a>
+    <h1 class="ststyle">Сьогодення Гейка Андрія Орестовича</h1>
+    <a class="returonmain" href="index.html">Назад на головну</a>
     <div class="row">
       <div class="col-lg-4 col-md-6 col-sm-12 item">
         <div class="item-wrap">
