--- a/Pract2/biography.html
+++ b/Pract2/biography.html
@@ -8,11 +8,16 @@
     <h1 id="top">Автобіографія Гейка Андрія Орестовича</h1>
     <a href="index.html">Назад на головну</a>
     <h3 id="сontent">Зміст</h3>
-    <a href="#article1">Базова інформація<br></a>
-    <a href="#article2">Дитинство<br></a>
-    <a href="#article3">Шкільні роки<br></a>
-    <a href="#article4">Поза школою<br></a>
-    <a href="#article5">Університет<br></a>
+    <a href="#article1">Базова інформація</a>
+    <br>
+    <a href="#article2">Дитинство</a>
+    <br>
+    <a href="#article3">Шкільні роки</a>
+    <br>
+    <a href="#article4">Поза школою</a>
+    <br>
+    <a href="#article5">Університет</a>
+    <br>
     <article id="article1">
         <h2>Базова інформація</h2>
         <p>
