--- a/Pract3/biography.html
+++ b/Pract3/biography.html
@@ -44,14 +44,19 @@
     </style>
     </head>
   <body>
-    <h1 id="top">Автобіографія Гейка Андрія Орестовича<br> </h1>
-    <a href="index.html">Назад на головну<br></a>
+    <h1 id="top">Автобіографія Гейка Андрія Орестовича</h1>
+    <a href="index.html">Назад на головну</a>
     <h3 id="сontent">Зміст</h3>
-    <a class="links" href="#article1">Базова інформація<br></a>
-    <a class="links" href="#article2">Дитинство<br></a>
-    <a class="links" href="#article3">Шкільні роки<br></a>
-    <a class="links" href="#article4">Поза школою<br></a>
-    <a class="links" href="#article5">Університет<br></a>
+    <a class="links" href="#article1">Базова інформація</a>
+    <br>
+    <a class="links" href="#article2">Дитинство</a>
+    <br>
+    <a class="links" href="#article3">Шкільні роки</a>
+    <br>
+    <a class="links" href="#article4">Поза школою</a>
+    <br>
+    <a class="links" href="#article5">Університет</a>
+    <br>
     <article id="article1">
         <h2>Базова інформація</h2>
         <p id="p1">
