--- a/Pract2/biography.html
+++ b/Pract2/biography.html
@@ -18,36 +18,36 @@
     <br>
     <a href="#article5">Університет</a>
     <br>
-    <article id="article1">
-        <h2>Базова інформація</h2>
+    <article>
+        <h2 id="article1">Базова інформація</h2>
         <p>
             Ну, я народився зимою. На даний час люблю слухати музику. Також я люблю читати одну ранобе. І спілкуватися із різними людьми. Граю в різні комп'ютерні ігри але віддаю перевагу стратегіям та шутерам від першої особи. Люблю поїсти чіпси чи сухарики.
         </p>
         <a href="#сontent">До змісту</a>
     </article>
-    <article id="article2">
-        <h2>Дитинство</h2>
+    <article>
+        <h2 id="article2">Дитинство</h2>
         <p>
             Про дитинство майже нічого не пам'ятаю. Швидше за все, воно було таким самим, як і у всіх. Мене водили до саду, потім забирали з нього. Я як усі діти чекав на літо для того, щоб відпочити, але як і у всіх мої плани щось псувало. Та й як зараз, любив поїсти щось солодке. 
             </p>
         <a href="#сontent">До змісту</a>
     </article>
-    <article id="article3">
-        <h2>Шкільні роки</h2>
+    <article>
+        <h2 id="article3">Шкільні роки</h2>
         <p>
     	    Шкільні роки я мав дуже веселі. Я завжди отримував люлей від вчителів через те, що багато говорив на уроці. Не любив і не люблю німецьку та біологію. Мав дружні стосунки з усім класом та, незважаючи на розмови на уроці, добре спілкувався із вчителями. Також наш клас знаходив різні пригоди.
         </p>
         <a href="#сontent">До змісту</a>
     </article>
-    <article id="article4">
-        <h2>Поза школою</h2>
+    <article>
+        <h2 id="article4">Поза школою</h2>
         <p>
     	    Ну поза школою я сидів вдома спілкуючись з товаришами. Міг трохи почитати чи послухати музику. Також допомагав мамі за потреби. Виконував домашні завдання за наявності. І ходив до репетиторів. :с
         </p>
         <a href="#сontent">До змісту</a>
     </article>
-    <article id="article5">
-        <h2>Університет</h2>
+    <article>
+        <h2 id="article5">Університет</h2>
         <p>
         	Я розумію, що навчаюсь у найкращому університеті України. Тому я думаю про те, як мені закрити сесію, щоби мене не вигнали з нього. Також в університеті я дізнаюсь багато нового. Я намагаюсь розуміти, що розповідають викладачі. І сподіваюся, що не отримаю сильних люлів на сесії. 
         </p>
