--- a/Pract6/friends.html
+++ b/Pract6/friends.html
@@ -6,10 +6,11 @@
          <link rel="stylesheet" href="friends.css">
       </head>
     <body>
-      <h1 class="ststyle">Друзі Гейка Андрія Орестовича<br> </h1>
-      <a class="returonmain" href="index.html">Назад на головну<br></a>
+      <h1 class="ststyle">Друзі Гейка Андрія Орестовича</h1>
+      <a class="returonmain" href="index.html">Назад на головну</a>
       <h2 class="mfstyle">Мої друзі</h2>
       <table id="table1">
+      <caption>Table Name</caption>
       <tr>
         <th>Прізвище</th>
         <th>Ім’я</th>
