--- a/Pract4/friends.html
+++ b/Pract4/friends.html
@@ -45,10 +45,11 @@
     </style>
     </head>
   <body>
-    <h1 class="ststyle">Друзі Гейка Андрія Орестовича<br> </h1>
-    <a class="returonmain" href="index.html">Назад на головну<br></a>
-    <h2 class="mfstyle">Мої друзі</h2>
+    <h1 class="ststyle">Друзі Гейка Андрія Орестовича</h1>
+    <a class="returonmain" href="index.html">Назад на головну</a>
+    <h2 class="mfstyle">Мої друзі</h2>  
     <table id="table1">
+    <caption>Table Name</caption>
     <tr>
       <th>Прізвище</th>
       <th>Ім’я</th>
