--- a/Pract3/friends.html
+++ b/Pract3/friends.html
@@ -21,10 +21,11 @@
     </style>
     </head>
   <body>
-    <h1>Друзі Гейка Андрія Орестовича<br> </h1>
-    <a href="index.html">Назад на головну<br></a>
+    <h1>Друзі Гейка Андрія Орестовича</h1>
+    <a href="index.html">Назад на головну</a>
     <h2>Мої друзі</h2>
     <table id="table1">
+    <caption>Table Name</caption>
     <tr>
       <th>Прізвище</th>
       <th>Ім’я</th>
