--- a/Pract2/friends.html
+++ b/Pract2/friends.html
@@ -5,10 +5,11 @@
       <title>friends.html</title>
     </head>
   <body>
-    <h1>Друзі Гейка Андрія Орестовича<br> </h1>
-    <a href="index.html">Назад на головну<br></a>
+    <h1>Друзі Гейка Андрія Орестовича</h1>
+    <a href="index.html">Назад на головну</a>
     <h2>Мої друзі</h2>
     <table>
+    <caption>Table Name</caption>
     <tr>
       <th>Прізвище</th>
       <th>Ім’я</th>
