--- a/Pract3/gallery.html
+++ b/Pract3/gallery.html
@@ -5,13 +5,13 @@
       <title>index.html</title>
     </head>
   <body>
-    <h1>Галерея Гейка Андрія Орестовича<br> </h1>
-    <a href="index.html">Назад на головну<br></a>
+    <h1>Галерея Гейка Андрія Орестовича</h1>
+    <a href="index.html">Назад на головну</a>
     <h2>Мої зображення</h2>
     <h3>Зображення у цій папці</h3>
     <img src ="Why.png" width ="640" height="480">
     <h3>Зображення у папці</h3>
-    <img src ="image\Who.png" width ="640" height="480">
+    <img src ="images\Who.png" width ="640" height="480">
     <h3>Зображення онлайн</h3>
     <img src ="https://place-hold.it/1280x1024/purple/red&text=Where" width ="1280" height="1024">
     </body>
