--- a/Pract4/gallery.html
+++ b/Pract4/gallery.html
@@ -34,13 +34,13 @@
     </head>
 
   <body>
-    <h1 class="ststyle">Галерея Гейка Андрія Орестовича<br> </h1>
-    <a class="returonmain" href="index.html">Назад на головну<br></a>
+    <h1 class="ststyle">Галерея Гейка Андрія Орестовича</h1>
+    <a class="returonmain" href="index.html">Назад на головну/a>
     <h2 class="myimage">Мої зображення</h2>
     <h3 class="iminthisfolderl">Зображення у цій папці</h3>
     <img class="imstyle" src ="Why.png" width ="640" height="480">
     <h3 class="iminfolderl">Зображення у папці</h3>
-    <img class="imstyle" src ="image\Who.png" width ="640" height="480">
+    <img class="imstyle" src ="images\Who.png" width ="640" height="480">
     <h3 class="imonline">Зображення онлайн</h3>
     <img class="imstyle" src ="https://place-hold.it/1280x1024/purple/red&text=Where" width ="1280" height="1024">
     </body>
