--- a/Pract6/gallery.html
+++ b/Pract6/gallery.html
@@ -7,8 +7,8 @@
     </head>
 
   <body>
-    <h1 class="ststyle">Галерея Гейка Андрія Орестовича<br> </h1>
-    <a class="returonmain" href="index.html">Назад на головну<br></a>
+    <h1 class="ststyle">Галерея Гейка Андрія Орестовича</h1>
+    <a class="returonmain" href="index.html">Назад на головну</a>
     <h2 class="myimage">Мої зображення</h2>
     <div class="row">
       <div class="col-lg-4 col-md-6 col-sm-12 item">
@@ -20,7 +20,7 @@
       <div class="col-lg-4 col-md-6 col-sm-12 item">
         <div class="item-wrap">
           <h3 class="iminfolderl">Зображення у папці</h3>
-          <img class="imstyle" src ="image\Who.png" width ="640" height="480">
+          <img class="imstyle" src ="images\Who.png" width ="640" height="480">
         </div>
       </div>
       <div class="col-lg-4 col-md-6 col-sm-12 item">
