--- a/Pract4/gallery.html
+++ b/Pract4/gallery.html
@@ -35,7 +35,7 @@
 
   <body>
     <h1 class="ststyle">Галерея Гейка Андрія Орестовича</h1>
-    <a class="returonmain" href="index.html">Назад на головну/a>
+    <a class="returonmain" href="index.html">Назад на головну</a>
     <h2 class="myimage">Мої зображення</h2>
     <h3 class="iminthisfolderl">Зображення у цій папці</h3>
     <img class="imstyle" src ="Why.png" width ="640" height="480">
