--- a/Pract1/novadays.html
+++ b/Pract1/novadays.html
@@ -4,8 +4,8 @@
       <meta charset="utf-8">
       <title>novadays.html</title>
   <body>
-    <h1>Сьогодення Гейка Андрія Орестовича<br> </h1>
-    <a>Назад на головну<br></a>
+    <h1>Сьогодення Гейка Андрія Орестовича</h1>
+    <a>Назад на головну</a>
     <h2>Мій типовий список покупок</h2>
     <ul>
       <li>Мінеральна вода</li>
