--- a/Pract1/gallery.html
+++ b/Pract1/gallery.html
@@ -5,8 +5,8 @@
       <title>index.html</title>
     </head>
   <body>
-    <h1>Галерея Гейка Андрія Орестовича<br> </h1>
-    <a>Назад на головну<br></a>
+    <h1>Галерея Гейка Андрія Орестовича</h1>
+    <a>Назад на головну</a>
     <h2>Мої зображення</h2>
     <h3>Зображення у цій папці</h3>
     <h3>Зображення у папці</h3>
