--- a/Pract1/friends.html
+++ b/Pract1/friends.html
@@ -5,8 +5,8 @@
       <title>friends.html</title>
     </head>
   <body>
-    <h1>Друзі Гейка Андрія Орестовича<br> </h1>
-    <a>Назад на головну<br></a>
+    <h1>Друзі Гейка Андрія Орестовича</h1>
+    <a>Назад на головну</a>
     <h2>Мої друзі</h2>
     <table>
     <tr>
