--- a/Pract1/biography.html
+++ b/Pract1/biography.html
@@ -6,13 +6,13 @@
     </head>
   <body>
     <h1>Автобіографія Гейка Андрія Орестовича</h1>
-    Назад на головну
+    <a>Назад на головну</a>
     <h3>Зміст</h3>
-    Базова інформація<br>
-    Дитинство<br>
-    Шкільні роки<br>
-    Поза школою<br>
-    Університет<br>
+    <a>Базова інформація</a><br>
+    <a>Дитинство</a><br>
+    <a>Шкільні роки</a><br>
+    <a>Поза школою</a><br>
+    <a>Університет</a><br>
     <article>
         <h2>Базова інформація</h2>
         <p>
