--- a/Pract1/index.html
+++ b/Pract1/index.html
@@ -7,10 +7,10 @@
   <body>
     <h1>Персональна сторінка Гейка Андрія Орестовича<br> </h1>
     <p>Люблю грати в різні ігри, найбільше всього в стратегії та шутери (бажано від першої особи) та спілкуватися з друзями в онлайн-додатку Discord. Також люблю читати ранобе. А ще я обожнюю багато спати.<br></p>
-     Автобіографія<br>
-     Сьогодення<br>
-     Друзі<br>
-     Галерея<br>
+     <a>Автобіографія</a><br>
+     <a>Сьогодення</a><br>
+     <a>Друзі</a><br>
+     <a>Галерея</a><br>
 
     </body>
 </html>
