--- a/Pract6/index.html
+++ b/Pract6/index.html
@@ -11,22 +11,22 @@
     <div class="row">
       <div class="col-lg-4 col-md-6 col-sm-12 item">
         <div class="item-wrap">
-          <a id = "a1" href="biography.html">Автобіографія<br></a>
+          <a id = "a1" href="biography.html">Автобіографія</a>
         </div>
       </div>
       <div class="col-lg-4 col-md-6 col-sm-12 item">
         <div class="item-wrap">
-          <a id = "a2" href="novadays.html">Сьогодення<br></a>
+          <a id = "a2" href="novadays.html">Сьогодення</a>
         </div>
       </div>
       <div class="col-lg-4 col-md-6 col-sm-12 item">
         <div class="item-wrap">
-          <a id = "a3" href="friends.html">Друзі<br></a>
+          <a id = "a3" href="friends.html">Друзі</a>
         </div>
       </div>
       <div class="col-lg-4 col-md-6 col-sm-12 item">
         <div class="item-wrap">
-          <a id = "a4" href="gallery.html">Галерея<br></a>
+          <a id = "a4" href="gallery.html">Галерея</a>
         </div>
       </div>
     </div>
