--- a/Pract3/index.html
+++ b/Pract3/index.html
@@ -32,7 +32,7 @@
     </head>
   <body>
     <h1>Персональна сторінка Гейка Андрія Орестовича</h1>
-    <p>Люблю грати в різні ігри, найбільше всього в стратегії та шутери (бажано від першої особи) та спілкуватися з друзями в онлайн-додатку Discord. Також люблю читати ранобе. А ще я обожнюю багато спати.</p>
+    <p>Люблю грати в різні ігри, найбільше всього в стратегії та шутери (бажано від першої особи) та спілкуватися з друзями в онлайн-додатку Discord. Також люблю читати різні ранобе та слухати музику, а також я обожнюю багато спати. Обожнюю игрові жанри типу Стратегія, Шутер та MOBA. Час від часу можу пограти в шахмати на онлайн ресурсі "Chess.com" та можу переглядувати ігрові партіі відомих шахматистів.</p>
     <a id = "a1" href="biography.html">Автобіографія</a>
     <br>
     <a id = "a2" href="novadays.html">Сьогодення</a>
