--- a/Pract6/index.html
+++ b/Pract6/index.html
@@ -7,7 +7,7 @@
     </head>
   <body>
     <h1>Персональна сторінка Гейка Андрія Орестовича<br> </h1>
-    <p>Люблю грати в різні ігри, найбільше всього в стратегії та шутери (бажано від першої особи) та спілкуватися з друзями в онлайн-додатку Discord. Також люблю читати ранобе. А ще я обожнюю багато спати.<br></p>
+    <p>Люблю грати в різні ігри, найбільше всього в стратегії та шутери (бажано від першої особи) та спілкуватися з друзями в онлайн-додатку Discord. Також люблю читати різні ранобе та слухати музику, а також я обожнюю багато спати. Обожнюю игрові жанри типу Стратегія, Шутер та MOBA. Час від часу можу пограти в шахмати на онлайн ресурсі "Chess.com" та можу переглядувати ігрові партіі відомих шахматистів.</p>
     <div class="row">
       <div class="col-lg-4 col-md-6 col-sm-12 item">
         <div class="item-wrap">
