--- a/Pract6/biography.html
+++ b/Pract6/biography.html
@@ -20,7 +20,7 @@
             <article>
                 <h2 id="article1">Базова інформація</h2>
                 <p id="p1">
-                    Ну, я народився зимою. На даний час люблю слухати музику. Також я люблю читати одну ранобе. І спілкуватися із різними людьми. Граю в різні комп'ютерні ігри але віддаю перевагу стратегіям та шутерам від першої особи. Люблю поїсти чіпси чи сухарики.
+                    Ну... я народився зимою. На даний час люблю слухати музику, читати одну ранобе ы спілкуватися з різними людьми. Граю в різні комп'ютерні ігри але віддаю перевагу стратегіям та шутерам від першої особи та іграм в жанрі MOBA, ну і трохи захоплююсь шахматами. Люблю поїсти чіпси чи сухарики, та обожнюю чорний та червоний чай. Також я обожнюю дивитися серіал "Flash", "Arrow" та "Legends of Tomorrow". 
                 </p>
                 <a class="retcont" href="#сontent">До змісту</a>
             </article>
@@ -33,7 +33,7 @@
                     <p id="p2">
                         Про дитинство майже нічого не пам'ятаю. Швидше за все, воно було таким самим, як і у всіх. Мене водили до саду, потім забирали з нього. Я як усі діти чекав на літо для того, щоб відпочити, але як і у всіх мої плани щось псувало. Та й як зараз, любив поїсти щось солодке. 
                     </p>
-                    <a class="retcont" href="#сontent">До змісту</a>
+                    <a class="re    tcont" href="#сontent">До змісту</a>
                 </article>
             </div>
         </div>
