--- a/Pract6/biography.html
+++ b/Pract6/biography.html
@@ -31,9 +31,9 @@
                 <article>
                     <h2 id="article2">Дитинство</h2>
                     <p id="p2">
-                        Про дитинство майже нічого не пам'ятаю. Швидше за все, воно було таким самим, як і у всіх. Мене водили до саду, потім забирали з нього. Я як усі діти чекав на літо для того, щоб відпочити, але як і у всіх мої плани щось псувало. Та й як зараз, любив поїсти щось солодке. 
+                        Про дитинство майже нічого не пам'ятаю. Помню тільки те що я любив дуже, вот прям дуже багато спати, але швидше за все, воно було таким самим, як і у всіх. Мене водили до саду, потім забирали з нього і відводили до дому. Купляли іграшкі при можливості та і як усі діти я чекав на літо для того, щоб відпочити, але як і у всіх мої плани щось псувало. При можливості гуляв на вулиці, та спілкувався зі своїми ровесниками. 
                     </p>
-                    <a class="re    tcont" href="#сontent">До змісту</a>
+                    <a class="retcont" href="#сontent">До змісту</a>
                 </article>
             </div>
         </div>
