--- a/Pract6/biography.html
+++ b/Pract6/biography.html
@@ -42,7 +42,7 @@
                 <article>
                     <h2 id="article3">Шкільні роки</h2>
                     <p id="p3"> 
-                    	Шкільні роки я мав дуже веселі. Я завжди отримував люлей від вчителів через те, що багато говорив на уроці. Не любив і не люблю німецьку та біологію. Мав дружні стосунки з усім класом та, незважаючи на розмови на уроці, добре спілкувався із вчителями. Також наш клас знаходив різні пригоди.
+                            Шкільні роки я мав дуже веселі, настільки, що я щось і досі пам'ятаю. Я завжди отримував люлей від вчителів через те, що надто багато говорив на уроці. Не любив і не люблю німецьку та біологію, але обожнював Математику та Інформатику. Мав дружні стосунки з усім класом та, незважаючи на розмови на уроці, добре спілкувався із вчителями. Але терпіти не міг різні ескурсії і тому подібне, бо рахував що дурна трата часу.
                     </p>
                     <a class="retcont" href="#сontent">До змісту</a>
                 </article>
