--- a/Pract6/biography.html
+++ b/Pract6/biography.html
@@ -53,7 +53,7 @@
                     <article>
                         <h2 id="article4">Поза школою</h2>
                         <p id="p4">
-                    	    Ну поза школою я сидів вдома спілкуючись з товаришами. Міг трохи почитати чи послухати музику. Також допомагав мамі за потреби. Виконував домашні завдання за наявності. І ходив до репетиторів. :с
+                    	    Ну поза школою я сидів вдома спілкуючись з товаришами та граючи в різні комп'ютерні ігри. За бажанням міг трохи почитати або послухати музику, або то і то одночасно. Також допомагав мамі чи татові за потреби. Виконував домашні завдання за наявності і ходив до репетиторів. А також я гуляв на вулиці граючи зі знайомими в різні ігри такі як футбол та інші, хотя я любив просто дивитися як вони грають бо мені було лень з ними.
                         </p>
                         <a class="retcont" href="#сontent">До змісту</a>
                     </article>
@@ -64,7 +64,7 @@
                 <article>
                     <h2 id="article5">Університет</h2>
                     <p id="p5">
-                    	Я розумію, що навчаюсь у найкращому університеті України. Тому я думаю про те, як мені закрити сесію, щоби мене не вигнали з нього. Також в університеті я дізнаюсь багато нового. Я намагаюсь розуміти, що розповідають викладачі. І сподіваюся, що не отримаю сильних люлів на сесії. 
+                    	Я розумію, що навчаюсь у найкращому університеті України. Тому я думаю про те, як мені закрити сесію, щоби мене не вигнали з нього. Також в університеті я дізнаюсь багато нового і намагаюсь розуміти, що розповідають викладачі. І сподіваюся, що не отримаю сильних люлів на сесії, хотя думаю що получу. А також провожу час за виконанням різних практичних чи лабораторних робіт і надіюсь що получу за них максимальний бал, бо сесію треба же якось закривати
                     </p>
                     <a class="retcont" href="#сontent">До змісту</a>
                 </article>
