--- a/Pract1/biography.html
+++ b/Pract1/biography.html
@@ -16,15 +16,15 @@
     <article>
         <h2>Базова інформація</h2>
         <p>
-            Ну, я народився зимою. На даний час люблю слухати музику. Також я люблю читати одну ранобе. І спілкуватися із різними людьми. Граю в різні комп'ютерні ігри але віддаю перевагу стратегіям та шутерам від першої особи. Люблю поїсти чіпси чи сухарики.
+            Ну... я народився зимою. На даний час люблю слухати музику, читати одну ранобе ы спілкуватися з різними людьми. Граю в різні комп'ютерні ігри але віддаю перевагу стратегіям та шутерам від першої особи та іграм в жанрі MOBA, ну і трохи захоплююсь шахматами. Люблю поїсти чіпси чи сухарики, та обожнюю чорний та червоний чай. Також я обожнюю дивитися серіал "Flash", "Arrow" та "Legends of Tomorrow".
         </p>
         <a>До змісту</a>
     </article>
     <article>
         <h2>Дитинство</h2>
         <p>
-            Про дитинство майже нічого не пам'ятаю. Швидше за все, воно було таким самим, як і у всіх. Мене водили до саду, потім забирали з нього. Я як усі діти чекав на літо для того, щоб відпочити, але як і у всіх мої плани щось псувало. Та й як зараз, любив поїсти щось солодке. 
-            </p>
+            Про дитинство майже нічого не пам'ятаю. Помню тільки те що я любив дуже, вот прям дуже багато спати, але швидше за все, воно було таким самим, як і у всіх. Мене водили до саду, потім забирали з нього і відводили до дому. Купляли іграшкі при можливості та і як усі діти я чекав на літо для того, щоб відпочити, але як і у всіх мої плани щось псувало. При можливості гуляв на вулиці, та спілкувався зі своїми ровесниками.
+        </p>
         <a>До змісту</a>
     </article>
     <article>
@@ -37,14 +37,14 @@
     <article>
         <h2>Поза школою</h2>
         <p>
-    	    Ну поза школою я сидів вдома спілкуючись з товаришами. Міг трохи почитати чи послухати музику. Також допомагав мамі за потреби. Виконував домашні завдання за наявності. І ходив до репетиторів. :с
+    	    Ну поза школою я сидів вдома спілкуючись з товаришами та граючи в різні комп'ютерні ігри. За бажанням міг трохи почитати або послухати музику, або то і то одночасно. Також допомагав мамі чи татові за потреби. Виконував домашні завдання за наявності і ходив до репетиторів. А також я гуляв на вулиці граючи зі знайомими в різні ігри такі як футбол та інші, хотя я любив просто дивитися як вони грають бо мені було лень з ними.
         </p>
         <a>До змісту</a>
     </article>
     <article>
         <h2>Університет</h2>
         <p>
-        	Я розумію, що навчаюсь у найкращому університеті України. Тому я думаю про те, як мені закрити сесію, щоби мене не вигнали з нього. Також в університеті я дізнаюсь багато нового. Я намагаюсь розуміти, що розповідають викладачі. І сподіваюся, що не отримаю сильних люлів на сесії. 
+        	Я розумію, що навчаюсь у найкращому університеті України. Тому я думаю про те, як мені закрити сесію, щоби мене не вигнали з нього. Також в університеті я дізнаюсь багато нового і намагаюсь розуміти, що розповідають викладачі. І сподіваюся, що не отримаю сильних люлів на сесії, хотя думаю що получу. А також провожу час за виконанням різних практичних чи лабораторних робіт і надіюсь що получу за них максимальний бал, бо сесію треба же якось закривати
         </p>
         <a>До змісту</a>
     </article>
