--- a/Pract2/biography.html
+++ b/Pract2/biography.html
@@ -21,35 +21,35 @@
     <article>
         <h2 id="article1">Базова інформація</h2>
         <p>
-            Ну, я народився зимою. На даний час люблю слухати музику. Також я люблю читати одну ранобе. І спілкуватися із різними людьми. Граю в різні комп'ютерні ігри але віддаю перевагу стратегіям та шутерам від першої особи. Люблю поїсти чіпси чи сухарики.
+            Ну... я народився зимою. На даний час люблю слухати музику, читати одну ранобе ы спілкуватися з різними людьми. Граю в різні комп'ютерні ігри але віддаю перевагу стратегіям та шутерам від першої особи та іграм в жанрі MOBA, ну і трохи захоплююсь шахматами. Люблю поїсти чіпси чи сухарики, та обожнюю чорний та червоний чай. Також я обожнюю дивитися серіал "Flash", "Arrow" та "Legends of Tomorrow".
         </p>
         <a href="#сontent">До змісту</a>
     </article>
     <article>
         <h2 id="article2">Дитинство</h2>
         <p>
-            Про дитинство майже нічого не пам'ятаю. Швидше за все, воно було таким самим, як і у всіх. Мене водили до саду, потім забирали з нього. Я як усі діти чекав на літо для того, щоб відпочити, але як і у всіх мої плани щось псувало. Та й як зараз, любив поїсти щось солодке. 
-            </p>
+            Про дитинство майже нічого не пам'ятаю. Помню тільки те що я любив дуже, вот прям дуже багато спати, але швидше за все, воно було таким самим, як і у всіх. Мене водили до саду, потім забирали з нього і відводили до дому. Купляли іграшкі при можливості та і як усі діти я чекав на літо для того, щоб відпочити, але як і у всіх мої плани щось псувало. При можливості гуляв на вулиці, та спілкувався зі своїми ровесниками.
+        </p>
         <a href="#сontent">До змісту</a>
     </article>
     <article>
         <h2 id="article3">Шкільні роки</h2>
         <p>
-    	    Шкільні роки я мав дуже веселі. Я завжди отримував люлей від вчителів через те, що багато говорив на уроці. Не любив і не люблю німецьку та біологію. Мав дружні стосунки з усім класом та, незважаючи на розмови на уроці, добре спілкувався із вчителями. Також наш клас знаходив різні пригоди.
+    	    Шкільні роки я мав дуже веселі, настільки, що я щось і досі пам'ятаю. Я завжди отримував люлей від вчителів через те, що надто багато говорив на уроці. Не любив і не люблю німецьку та біологію, але обожнював Математику та Інформатику. Мав дружні стосунки з усім класом та, незважаючи на розмови на уроці, добре спілкувався із вчителями. Але терпіти не міг різні ескурсії і тому подібне, бо рахував що дурна трата часу.
         </p>
         <a href="#сontent">До змісту</a>
     </article>
     <article>
         <h2 id="article4">Поза школою</h2>
         <p>
-    	    Ну поза школою я сидів вдома спілкуючись з товаришами. Міг трохи почитати чи послухати музику. Також допомагав мамі за потреби. Виконував домашні завдання за наявності. І ходив до репетиторів. :с
+    	    Ну поза школою я сидів вдома спілкуючись з товаришами та граючи в різні комп'ютерні ігри. За бажанням міг трохи почитати або послухати музику, або то і то одночасно. Також допомагав мамі чи татові за потреби. Виконував домашні завдання за наявності і ходив до репетиторів. А також я гуляв на вулиці граючи зі знайомими в різні ігри такі як футбол та інші, хотя я любив просто дивитися як вони грають бо мені було лень з ними.
         </p>
         <a href="#сontent">До змісту</a>
     </article>
     <article>
         <h2 id="article5">Університет</h2>
         <p>
-        	Я розумію, що навчаюсь у найкращому університеті України. Тому я думаю про те, як мені закрити сесію, щоби мене не вигнали з нього. Також в університеті я дізнаюсь багато нового. Я намагаюсь розуміти, що розповідають викладачі. І сподіваюся, що не отримаю сильних люлів на сесії. 
+        	Я розумію, що навчаюсь у найкращому університеті України. Тому я думаю про те, як мені закрити сесію, щоби мене не вигнали з нього. Також в університеті я дізнаюсь багато нового і намагаюсь розуміти, що розповідають викладачі. І сподіваюся, що не отримаю сильних люлів на сесії, хотя думаю що получу. А також провожу час за виконанням різних практичних чи лабораторних робіт і надіюсь що получу за них максимальний бал, бо сесію треба же якось закривати
         </p>
         <a href="#сontent">До змісту</a>
     </article>
