--- a/Pract1/biography.html
+++ b/Pract1/biography.html
@@ -30,7 +30,7 @@
     <article>
         <h2>Шкільні роки</h2>
         <p>
-    	    Шкільні роки я мав дуже веселі. Я завжди отримував люлей від вчителів через те, що багато говорив на уроці. Не любив і не люблю німецьку та біологію. Мав дружні стосунки з усім класом та, незважаючи на розмови на уроці, добре спілкувався із вчителями. Також наш клас знаходив різні пригоди.
+    	    Шкільні роки я мав дуже веселі, настільки, що я щось і досі пам'ятаю. Я завжди отримував люлей від вчителів через те, що надто багато говорив на уроці. Не любив і не люблю німецьку та біологію, але обожнював Математику та Інформатику. Мав дружні стосунки з усім класом та, незважаючи на розмови на уроці, добре спілкувався із вчителями. Але терпіти не міг різні ескурсії і тому подібне, бо рахував що дурна трата часу.
         </p>
         <a>До змісту</a>
     </article>
