--- a/Pract3/biography.html
+++ b/Pract3/biography.html
@@ -74,7 +74,7 @@
     <article>
         <h2 id="article3">Шкільні роки</h2>
         <p id="p3">
-    	    Про дитинство майже нічого не пам'ятаю. Помню тільки те що я любив дуже, вот прям дуже багато спати, але швидше за все, воно було таким самим, як і у всіх. Мене водили до саду, потім забирали з нього і відводили до дому. Купляли іграшкі при можливості та і як усі діти я чекав на літо для того, щоб відпочити, але як і у всіх мої плани щось псувало. При можливості гуляв на вулиці, та спілкувався зі своїми ровесниками.
+    	    Шкільні роки я мав дуже веселі, настільки, що я щось і досі пам'ятаю. Я завжди отримував люлей від вчителів через те, що надто багато говорив на уроці. Не любив і не люблю німецьку та біологію, але обожнював Математику та Інформатику. Мав дружні стосунки з усім класом та, незважаючи на розмови на уроці, добре спілкувався із вчителями. Але терпіти не міг різні ескурсії і тому подібне, бо рахував що дурна трата часу.
         </p>
         <a href="#сontent">До змісту</a>
     </article>
